snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.module.sha512
05b15828095b4a77ebd74c07d067fa6a9dd14b82c3ec46638d123183d918fb4e230013519a8b1949b23a32305f5764c6fc94420e47c9a944a23df4464ea4f6e1